css/style.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
}

h2 {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
}

h4 {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
}

.main_container {
  margin: 6%;
}

header {
  height: 60px;
  background: none;
  display: flex;
  justify-content: space-between;
  padding: 2% 5%;
}

.demo-btn {
  width: 135px;
  padding: 15px;
  border-radius: 30px;
  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  border: none;
  background-color: hsl(322, 100%, 66%);
  color: #ffffff;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
}

.demo-btn-2 {
  width: 150px;
  padding: 15px;
  border-radius: 30px;
  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  border: none;
  background-color: hsl(322, 100%, 66%);
  color: #ffffff;
  margin-top: 30px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
}
.demo-btn-3 {
  width: 150px;
  padding: 15px;
  border-radius: 30px;
  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  border: none;
  background-color: hsl(322, 100%, 66%);
  color: #ffffff;
  margin-top: 30px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
}

.demo-link {
  text-decoration: none;
  color: black;
  text-align: center;
  font-size: 20px;
}

.demo-link-2 {
  text-decoration: none;
  color: black;
  text-align: center;
  font-size: 14px;
}

.top-section {
  background-image: url(../images/bg-hero-desktop.svg);
  background-color: hsl(193, 100%, 96%);
  height: 100vh;
}

main {
  display: flex;
  justify-content: space-between;
  margin: 2% 5%;
}

.main-img {
  width: 100%;
  height: 600px;
}

.main-txt {
  display: flex;
  align-items: center;
}

.icon-email {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.box {
  box-shadow: 0 10px 50px 20px rgba(236, 235, 235, 0.849);
  border-radius: 15px;
  padding: 22.5px;
  display: flex;
  justify-content: space-between;
  margin-top: 30px;
}

.box1 {
  flex-direction: row-reverse;
}

.img-section {
  width: 60%;
  height: 300px;
}

.img-flowing-converse {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.txt-section {
  display: flex;
  align-items: center;
}

.notify_box {
  margin-left: 20%;
  margin-right: 20%;
  border-radius: 15px;
  padding: 15.5px;
  height: 200px;
  display: flex;
  align-items: center;
  flex-direction: column;
  z-index: 20;
  background-color: #ffffff;
  color: black;
  position: absolute;
  margin-top: -5px;
  width: 60%;
  border: 2px solid #f4f4f4;
}

.notify_box > h4 {
  margin-top: 50px;
}

footer {
  height: 475px;
  background-color: hsl(192, 100%, 9%);
  color: #ffffff;
  margin-top: 202px;
  display: flex;
  align-items: center;
}

.footer_txt {
  display: flex;
  margin: 5px 7%;
  justify-content: space-between;
  width: 86%;
  padding-top: 70px;
}

.footer-info {
  padding-top: 30px;
  display: flex;
}
.txt_hold {
  padding-left: 27px;
}

.fas {
  padding-top: 7px;
}

.footer-info-2 {
  margin: 20px 0;
  display: flex;
}
.footer-info-3 {
  display: flex;
}

.txt_hold {
  margin: 5px 0;
}

.logo2 {
  margin-top: 40px;
}

li {
  list-style: none;
  padding: 10px 0;
}

ul {
  padding-top: 50%;
}

.social-icons {
  margin: 25% 0;
}

.fab {
  padding: 8px;
  background-color: none;
  color: #ffffff;
  border-radius: 50%;
  border: 1px solid #ffffff;
  margin-right: 10px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
}

.fab:hover {
  background-color: hsl(322, 100%, 66%);
  color: #ffffff;
  cursor: pointer;
}

.fa-facebook-f {
  padding: 8px 11px;
}

.icon-email-box {
  width: 20px;
  height: 20px;
  padding-top: 7px;
}

.copyright {
  padding-top: 30%;
}

@media (max-width: 600px) {
  .demo-btn {
    width: 120px;
    padding: 5px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    font-size: smaller;
    margin-top: 15px;
  }

  .logo {
    width: 35%;
  }
  .logo2 {
    width: 70%;
  }
  main {
    display: flex;
    flex-direction: column;
  }
  .main-img {
    width: 100%;
    height: 200px;
    margin-top: 40px;
  }

  .txt_container {
    text-align: center;
  }

  .demo-btn-2 {
    margin: 0;
    width: 170px;
    padding: 11px;
  }
  .demo-link-2 {
    display: flex;
    justify-content: center;
  }
  .box {
    display: flex;
    flex-direction: column-reverse;
  }

  .img-section {
    width: 100%;
  }
  .notify_box {
    height: 130px;
    margin-top: 60px;
    margin-left: 15%;
    margin-right: 20%;
  }
  .demo-btn-3 {
    margin-top: -10%;
    width: 170px;
    padding: 11px;
    padding: 5px;
    font-size: smaller;
  }
  .footer_txt {
    display: flex;
    flex-direction: column;
    padding-top: 0;
    height: 100px;
    margin-top: 60px;
    justify-content: flex-start;
    width: 100%;
  }

  footer {
    height: 930px;
    align-items: flex-start;
    width: 100%;
  }
  ul {
    padding-top: 2%;
  }
  .social-icons {
    margin-top: 15%;
    margin-left: 34.5%;
    display: flex;
  }

  .copyright {
    padding-top: 0;
    font-size: smaller;
    padding-right: 0;
    margin-left: 0;
    margin-top: -40px;
    text-align: center;
  }
  main {
    margin: 0;
  }
  html,
  body {
    margin: 0;
    height: 100%;
    width: 100%;
  }
  .notify_box > h4 {
    margin: 40px 0;
    font-size: 12px;
    text-align: center;
  }
}

